--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -21,4 +21,5 @@
     <link rel="stylesheet" href="/css/Registration-Form-with-Photo.css">
     <link rel="stylesheet" href="/css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
