add autocomplete=off attribute

--- a/views/auth/password.hbs
+++ b/views/auth/password.hbs
@@ -5,7 +5,7 @@
 
 <h1>Забыли пароль?</h1>
 <form action="/auth/password" method="post">
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" required minlength="8" maxlength="50">
     <label for="email">Введите новый пароль</label>
 
 
