--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -5,7 +5,7 @@
 <div class="register-photo">
     <div class="form-container">
         <div class="image-holder"></div>
-        <form method="post" action="/auth/register">
+        <form method="post" action="/auth/register" autocomplete="off">
             <h2 class="text-center"><strong>Создать</strong>&nbsp;аккаунт</h2>
             <div class="form-group"><input class="form-control" type="email" id="email" name="email"
                                            placeholder="Email" required></div>
