--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -8,7 +8,7 @@
                 <h6 class="text-primary font-weight-bold m-0">Список дел</h6>
             </div>
 
-            <form action="/add" method="post">
+            <form action="/add" method="post" autocomplete="off">
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <button type="submit" class="btn btn-primary">Добавить</button>
