+ send email validator

--- a/public/css/Contact-Form-Clean.css
+++ b/public/css/Contact-Form-Clean.css
@@ -84,7 +84,7 @@
 }
 
 .contact-clean form .btn-primary {
-  background-color: #055ada !important;
+  background-color: #292c2f !important;
   margin-top: 15px;
   color: #fff;
 }
