--- a/public/css/Navigation-with-Button.css
+++ b/public/css/Navigation-with-Button.css
@@ -112,6 +112,10 @@
   .navigation-clean-button .navbar-nav .show .dropdown-menu {
     box-shadow: none;
   }
+  i.material-icons {
+    display: none;
+  }
+
 }
 
 @media (max-width:767px) {
@@ -177,7 +181,7 @@
 }
 
 .navigation-clean-button .navbar-text .action-button, .navigation-clean-button .navbar-text .action-button:active, .navigation-clean-button .navbar-text .action-button:hover {
-  background: #56c6c6;
+  background: #292c2f;
   border-radius: 20px;
   font-size: inherit;
   color: #fff;
@@ -190,14 +194,16 @@
 }
 
 .navigation-clean-button .navbar-text .action-button:hover {
-  background: #66d7d7;
+  background: #292c2f;
+  opacity: 0.9;
 }
 
 .navigation-clean-button.navbar-dark .action-button, .navigation-clean-button.navbar-dark .action-button:active {
-  background: #208f8f;
+  background: #292c2f;
 }
 
 .navigation-clean-button.navbar-dark .action-button:hover {
-  background: #269d9d;
+  background: #292c2f;
+  opacity: 0.9;
 }
 
