--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,13 @@
                                 немного текста: бла-бла, бла-бла, извините, бла-бла, бла-бла.<br>И еще немного:
                                 бла-бла, бла-бла, бла-бла.<br><br>Перейти к списку дел:<br></p>
                             <div style="text-align:center">
-                                <button class="btn btn-light btn-lg" type="button">КЛИКНИ МЕНЯ</button>
+                                <button class="btn btn-light btn-lg" type="button">
+                                    {{#if isAuth}}
+                                        <a href="/todo">TODO</a>
+                                    {{else}}
+                                        <a href="/auth/login">Войти</a>
+                                    {{/if}}
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -26,19 +32,22 @@
     </div>
 </div>
 
+{{#if sendContactEmailError}}
+    <p class="alert">{{sendContactEmailError}}</p>
+{{/if}}
 
 <div class="contact-clean" style="margin-top: 100px;">
-    <form method="post" action="">
+    <form method="post" action="/contact">
         <h2 class="text-center">Связаться с нами</h2>
-        <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Имя"></div>
+        <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Имя" required minlength="3" maxlength="50"></div>
         <div class="form-group"><input class="form-control" type="email" name="email"
-                                       placeholder="Email"></div>
+                                       placeholder="Email" required></div>
         <div class="form-group"><textarea class="form-control" name="message" placeholder="Сообщение"
-                                          rows="14"></textarea></div>
+                                          rows="14" required minlength="10" maxlength="250"></textarea></div>
         <div class="form-group">
             <button class="btn btn-primary" type="submit">отправить&nbsp;</button>
         </div>
 
-<!--        <input type="hidden" name="_csrf" value="{{csrf}}">-->
+        <input type="hidden" name="_csrf" value="{{csrf}}">
     </form>
 </div>
