--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,17 +1,32 @@
 <nav class="navbar navbar-light navbar-expand-md navigation-clean-button"
      style="margin-bottom: 100px;box-shadow: 3px -6px 20px 0px;">
     {{#if isAuth}}
-    <div class="container"><a class="navbar-brand" href="/">Главная</a>
+    <div class="container">
+    {{#if isHome}}
+        <a class="navbar-brand selected" href="/">Главная</a>
+    {{else}}
+        <a class="navbar-brand" href="/">Главная</a>
+    {{/if}}
+
         <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                 class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse"
          id="navcol-1">
         <ul class="nav navbar-nav d-flex justify-content-start align-items-start mr-auto">
-            <li class="nav-item" role="presentation"><a class="nav-link text-secondary"
-                                                        href="/todo">Todo</a>
+            <li class="nav-item" role="presentation">
+                {{#if isTodo}}
+                <a class="nav-link text-secondary selected" style="text-decoration: underline; font-weight: bold" href="/todo">Todo</a>
+                {{else}}
+                <a class="nav-link text-secondary" href="/todo">Todo</a>
+                {{/if}}
+
             </li>
-            <li class="nav-item" role="presentation"><a class="nav-link text-secondary"
-                                                        href="/profile">Профиль</a>
+            <li class="nav-item" role="presentation">
+                {{# if isProfile}}
+                <a style="text-decoration: underline; font-weight: bold" class="nav-link text-secondary" href="/profile">Профиль</a>
+                {{else}}
+                <a class="nav-link text-secondary" href="/profile">Профиль</a>
+                {{/if}}
             </li>
         </ul>
 
@@ -19,7 +34,14 @@
             <a class="btn btn-light action-button" role="button" href="/auth/logout">Выйти</a>
         </span>
     {{else}}
-        <div class="container"><a class="navbar-brand" href="/">Главная</a>
+        <div class="container">
+            {{#if isHome}}
+                <a class="navbar-brand" href="/">Главная</a>
+                <i class="material-icons">chevron_left</i>
+            {{else}}
+                <a class="navbar-brand" href="/">Главная</a>
+            {{/if}}
+
             <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
@@ -28,9 +50,21 @@
                     <li class="nav-item" role="presentation"></li>
                     <li class="nav-item" role="presentation"></li>
                 </ul>
-                <span class="d-flex align-items-center navbar-text actions"> <a class="login"
-                                                                                href="/auth/login">Войти</a><a
-                        class="btn btn-light action-button" role="button" href="/auth/register">Регистрация</a></span>
+                <span class="d-flex align-items-center navbar-text actions">
+                    {{#if isLogin}}
+                        <i class="tiny material-icons">chevron_right</i>
+                        <a class="login" href="/auth/login">Войти</a>
+                    {{else}}
+                        <a class="login" href="/auth/login">Войти</a>
+                    {{/if}}
+
+                    {{#if isRegister}}
+                        <a class="btn btn-light action-button selected" role="button"
+                           href="/auth/register">Регистрация</a>
+                    {{else}}
+                        <a class="btn btn-light action-button" role="button" href="/auth/register">Регистрация</a>
+                    {{/if}}
+                </span>
             </div>
         </div>
     {{/if}}
