--- a/views/auth/password.hbs
+++ b/views/auth/password.hbs
@@ -2,16 +2,21 @@
     <p class="alert">{{error}}</p>
 {{/if}}
 
+<div class="login-clean-reset">
+    <form action="/auth/password" method="post">
+        <h3>Новый пароль</h3>
+        <div class="form-group">
+            <input type="password" class="form-control" id="password" name="password" required minlength="8"
+                   maxlength="50">
+        </div>
 
-<h1>Забыли пароль?</h1>
-<form action="/auth/password" method="post">
-    <input type="password" id="password" name="password" required minlength="8" maxlength="50">
-    <label for="email">Введите новый пароль</label>
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+        <input type="hidden" name="userId" value="{{userId}}">
+        <input type="hidden" name="token" value="{{token}}">
 
-
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-    <input type="hidden" name="userId" value="{{userId}}">
-    <input type="hidden" name="token" value="{{token}}">
-
-    <button type="submit" class="btn btn-primary">Сбросить</button>
-</form>
+        <div class="form-group">
+            <button class="btn btn-primary btn-block" type="submit">ОБНОВИТЬ</button>
+            <small id="emailHelp" class="form-text text-muted">Минимальная длина пароля 8 символов</small>
+        </div>
+    </form>
+</div>
