--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,8 +2,9 @@
 <body style="margin-bottom: 0;">
 {{>navbar}}
 
-{{{body}}}
-
+<div class="content">
+    {{{body}}}
+</div>
 {{>footer}}
 
 </body>
