--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,11 +1,18 @@
 <div class="footer-basic" style="background-color: rgb(41,44,47);padding: 10px;">
     <footer>
-        <div class="social"><a href="#">T</a><a href="#">O</a><a href="#">D</a><a href="#"><i class="icon ion-social-github"></i></a></div>
+        <div class="social"><a href="#">T</a><a href="#">O</a><a href="#">D</a><a href="#"><i
+                class="icon ion-social-github"></i></a></div>
         <ul>
             <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">Главная</li>
             <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">Контакы</li>
+            <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">
+                <div class="icon-made-by">Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a>
+                    from <a
+                            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            </li>
         </ul>
         <p class="copyright">Todo-list © 2020</p>
+
     </footer>
 </div>
 <div></div>
