--- a/views/not-found-404.hbs
+++ b/views/not-found-404.hbs
@@ -1,1 +1,9 @@
-<h1>Такой страницы нет</h1>
+<div class="container">
+    <div class="error">
+        <img class="error-svg" width="250px" src="/img/error.svg" alt="error">
+        <h1>404</h1>
+    </div>
+    <h3>Страница не найдена, <a href="/">вернуться на главную</a></h3>
+    <br><br><br>
+
+</div>
