--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/css/Pretty-Footer.css">
     <link rel="stylesheet" href="/css/Registration-Form-with-Photo.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/reset-password.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
