--- a/views/limit.hbs
+++ b/views/limit.hbs
@@ -1,1 +1,9 @@
-<h1>Лимит исчерпан</h1>
+<div class="container" style="text-align: center">
+    <div style="padding: 50px 0 110px 0">
+        <h1>Лимит исчерпан.</h1>
+        <p>Приносим свои извинения, однако в связи с тем, что количество всех созданных тудушек превышает 100, мы
+            вынуждены
+            запретить создание новых записей.</p>
+        <p><a href="/todo">Вы можете попробовать удалить несколько тудушек :)</a></p>
+    </div>
+</div>
