--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,10 +1,13 @@
 <div class="footer-basic" style="background-color: rgb(41,44,47);padding: 10px;">
     <footer>
-        <div class="social"><a href="#">T</a><a href="#">O</a><a href="#">D</a><a href="#"><i
+        <div class="social"><a href="#T">T</a><a href="#O">O</a><a href="#D">D</a><a href="#github"><i
                 class="icon ion-social-github"></i></a></div>
         <ul>
-            <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">Главная</li>
-            <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">Контакы</li>
+            <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">
+                <a href="/">Главная</a>
+            </li>
+            <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">
+                <a href="/#contactToUs">Написать нам</a></li>
             <li style="font-family: ABeeZee, sans-serif;color: rgb(201,202,203);">
                 <div class="icon-made-by">Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a>
                     from <a
@@ -20,4 +23,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 <script src="/js/Fixed-navbar-starting-with-transparency.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+<script src="/js/date.js"></script>
 
