--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,15 +37,15 @@
 {{/if}}
 
 <div class="contact-clean" style="margin-top: 100px;">
-    <form method="post" action="/contact">
+    <form method="post" action="/contact" id="contactToUs">
         <h2 class="text-center">Связаться с нами</h2>
-        <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Имя" required minlength="3" maxlength="50"></div>
-        <div class="form-group"><input class="form-control" type="email" name="email"
+        <div class="form-group"><input onkeyup="empty()" class="form-control" type="text" id="name" name="name" placeholder="Имя" required minlength="3" maxlength="50"></div>
+        <div class="form-group"><input onkeyup="empty()" class="form-control" id="email" type="email" name="email"
                                        placeholder="Email" required></div>
-        <div class="form-group"><textarea class="form-control" name="message" placeholder="Сообщение"
+        <div class="form-group"><textarea onkeyup="empty()" class="form-control" id="message" name="message" placeholder="Сообщение"
                                           rows="14" required minlength="10" maxlength="250"></textarea></div>
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">отправить&nbsp;</button>
+            <button disabled id="submit-button" class="btn btn-primary" type="submit">отправить&nbsp;</button>
         </div>
 
         <input type="hidden" name="_csrf" value="{{csrf}}">
