--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -2,74 +2,26 @@
     <p class="alert">{{error}}</p>
 {{/if}}
 <div class="my-chart">
-
     <div class="container">
-        <!--        start -->
-        <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="text-primary font-weight-bold m-0">Список дел</h6>
+        <form action="/add" method="post" autocomplete="off" autofocus>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <button type="submit" class="btn btn-secondary" style="border-radius: 0">ДОБАВИТЬ</button>
+                </div>
+                <input autofocus required type="text" name="title" id="title" class="form-control"
+                       aria-label="Text input with radio button" minlength="3" maxlength="100">
             </div>
 
-            <form action="/add" method="post" autocomplete="off">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button type="submit" class="btn btn-primary">Добавить</button>
-                    </div>
-                    <input autofocus required type="text" name="title" id="title" class="form-control"
-                           aria-label="Text input with radio button" minlength="3" maxlength="100">
-                </div>
-
-                <input type="hidden" name="_csrf" value="{{csrf}}">
-            </form>
+            <input type="hidden" name="_csrf" value="{{csrf}}">
+        </form>
 
 
-            <ul class="list-group list-group-flush">
-                {{#if todo.length}}
-                    {{#each todo}}
-
-                        {{#if @root.isAuth}}
-                            {{#ifeq userId._id @root.userId}}
-                                <li class="list-group-item">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col mr-2">
-                                            <h6 class="mb-0"><strong>{{title}}</strong></h6>
-                                            <span class="text-xs toDate">{{updatedAt}}</span>
-                                        </div>
-
-                                        <a href="/todo/{{_id}}/edit?allow=true"><i class="large material-icons">edit</i></a>
-                                        <form action="/todo/delete" method="post">
-                                            <input type="hidden" name="id" value="{{todo._id}}">
-                                            <button type="submit" class="btn btn-primary"><i
-                                                    class="large material-icons">check_circle</i>
-                                            </button>
-
-                                            <input type="hidden" name="_csrf" value="{{@root.csrf}}">
-                                        </form>
-                                    </div>
-                                </li>
-                            {{/ifeq}}
-                        {{/if}}
-                    {{/each}}
-                {{else}}
-                    <div>
-                        <div class="empty-todos">
-                            <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">
-                            <p>Список пустует :(</p>
-                        </div>
-                    </div>
-                {{/if}}
-            </ul>
-        </div>
-
-
-        <!--table start-->
         <table class="table table-striped table-dark">
         <thead class="thead-dark">
             {{#if todo.length}}
             <tr>
-                <th>Title</th>
-                <th>Date</th>
-
+                <th>Название</th>
+                <th style="float: right">Дата и опции</th>
             </tr>
             </thead>
                 <tbody>
@@ -78,54 +30,69 @@
                         {{#ifeq userId._id @root.userId}}
                             <tr>
                                 <td>{{title}}</td>
-                                <td style="float: right">
-                                    <span class="toDate">{{updatedAt}}</span>
-                                    <span>Delete</span>
-                                    <span>Edit</span>
+                                <td style="float: right" class="td">
+                                    <span style="margin-right: 20px" class="toDate">{{updatedAt}}</span>
+                                    <span><a href="/todo/{{_id}}/edit?allow=true"><i
+                                            class="large material-icons edit-btn">edit</i></a>
+                                    </span>
+                                    <span>
+                                        <form action="/todo/delete" method="post">
+                                            <input type="hidden" name="id" value="{{todo._id}}">
+                                            <input type="hidden" name="_csrf" value="{{@root.csrf}}">
+
+                                            <button type="submit" class="delete-btn"><i
+                                                    class="material-icons">delete_forever</i></button>
+                                        </form>
+                                    </span>
                                 </td>
                             </tr>
+                        {{else}}
+                            <div>
+                                <div class="empty-todos">
+                                    <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">
+                                    <p>Список пустует :(</p>
+                                </div>
+                            </div>
                         {{/ifeq}}
                     {{/if}}
                 {{/each}}
                 </tbody>
 
             {{else}}
-                sadjaksdjaskldjfslk
+                <div>
+                    <div class="empty-todos">
+                        <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">
+                        <p>Список пустует :(</p>
+                    </div>
+                </div>
             {{/if}}
         </table>
-        <!--table end-->
 
-
-        <!--    end -->
-
-    </div>
-
-    <div class="col-lg-7 col-xl-4">
-        <div class="card shadow mb-4">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h6 class="text-primary font-weight-bold m-0">Earnings Overview</h6>
-                <div class="dropdown no-arrow">
-                    <button class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                            type="button"><i class="fas fa-ellipsis-v text-gray-400"></i></button>
-                    <div class="dropdown-menu shadow dropdown-menu-right animated--fade-in"
-                         role="menu">
-                        <p class="text-center dropdown-header">dropdown header:</p><a class="dropdown-item"
-                                                                                      role="presentation"
-                                                                                      href="#"> Action</a><a
-                            class="dropdown-item" role="presentation" href="#"> Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" role="presentation" href="#"> Something else here</a></div>
+        <div class="col-lg-7 col-xl-4">
+            <div class="card shadow mb-4">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h6 class="text-primary font-weight-bold m-0">Earnings Overview</h6>
+                    <div class="dropdown no-arrow">
+                        <button class="btn btn-link btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                                type="button"><i class="fas fa-ellipsis-v text-gray-400"></i></button>
+                        <div class="dropdown-menu shadow dropdown-menu-right animated--fade-in"
+                             role="menu">
+                            <p class="text-center dropdown-header">dropdown header:</p><a class="dropdown-item"
+                                                                                          role="presentation"
+                                                                                          href="#"> Action</a><a
+                                class="dropdown-item" role="presentation" href="#"> Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" role="presentation" href="#"> Something else here</a></div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <div class="chart-area">
-                    <canvas height="324" width="367" style="display: block; height: 321px; width: 364px;"></canvas>
+                <div class="card-body">
+                    <div class="chart-area">
+                        <canvas height="324" width="367" style="display: block; height: 321px; width: 364px;"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 </div>
-
-
-
-
