--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,21 +1,22 @@
-<h1>{{todo.title}}</h1>
+<div class="container">
+    <h1>{{todo.title}}</h1>
 
-<form action="/todo/edit" method="post">
-    <div class="form-group">
-        <input type="text" id="title" name="title" value="{{todo.title}}">
+    <form action="/todo/edit" method="post">
+        <div class="form-group">
+            <input type="text" id="title" name="title" value="{{todo.title}}">
 
+            <input type="hidden" name="id" value="{{todo._id}}">
+            <button type="submit" class="btn btn-primary">Обновить</button>
+        </div>
+
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+    </form>
+
+    <form action="/todo/delete" method="post">
         <input type="hidden" name="id" value="{{todo._id}}">
-        <button type="submit" class="btn btn-primary">Обновить</button>
-    </div>
+        <button type="submit" class="btn btn-primary"><i class="large material-icons">check_circle</i>
+        </button>
 
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-</form>
-
-<form action="/todo/delete" method="post">
-    <input type="hidden" name="id" value="{{todo._id}}">
-    <button type="submit" class="btn btn-primary"><i class="large material-icons">check_circle</i>
-    </button>
-
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-</form>
-
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+    </form>
+</div>
