--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -16,8 +16,8 @@
         </form>
 
 
-        <table class="table table-striped table-dark">
-        <thead class="thead-dark">
+        <table class="table table-striped">
+        <thead class="thead">
             {{#if todo.length}}
             <tr>
                 <th>Название</th>
@@ -62,7 +62,7 @@
                 <div>
                     <div class="empty-todos">
                         <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">
-                        <p>Список пустует :(</p>
+                        <p style="margin: 0; padding: 20px">Список пустует :(</p>
                     </div>
                 </div>
             {{/if}}
