--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -48,10 +48,10 @@
                             </tr>
                         {{else}}
                             <div>
-                                <div class="empty-todos">
-                                    <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">
-                                    <p>Список пустует :(</p>
-                                </div>
+                                <!--                                <div class="empty-todos">-->
+                                <!--                                    <img class="empty-todo-svg" src="/img/book.svg" alt="No todos yet">-->
+                                <!--                                    <p>Список пустует :(</p>-->
+                                <!--                                </div>-->
                             </div>
                         {{/ifeq}}
                     {{/if}}
