--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,9 +90,6 @@ html, body {
     transform: rotate(45deg);
 }
 
-.card {
-    min-height: 900px;
-}
 
 
 .file {
@@ -199,4 +196,8 @@ table {
 
 .empty-todos {
     box-shadow: 0 0 8px 2px #d5d5d5;
+}
+th{
+    margin-bottom: 0;
+    border: none !important;
 }
