add anchor for logform

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -3,7 +3,7 @@
 {{/if}}
 
 <div class="login-clean">
-    <form method="post" action="/auth/login">
+    <form method="post" action="/auth/login" id="logIn">
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
         <div class="form-group"><input required class="form-control" type="email" name="email" placeholder="Email">
