--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
                                     {{#if isAuth}}
                                         <a href="/todo">TODO</a>
                                     {{else}}
-                                        <a href="/auth/login">Войти</a>
+                                        <a href="/auth/login#logIn">Войти</a>
                                     {{/if}}
                                 </button>
                             </div>
