--- a/views/index.hbs
+++ b/views/index.hbs
@@ -45,7 +45,7 @@
         <div class="form-group"><textarea onkeyup="empty()" class="form-control" id="message" name="message" placeholder="Сообщение"
                                           rows="14" required minlength="10" maxlength="250"></textarea></div>
         <div class="form-group">
-            <button disabled id="submit-button" class="btn btn-primary" type="submit">отправить&nbsp;</button>
+            <button disabled id="submit" class="btn btn-primary" type="submit">отправить&nbsp;</button>
         </div>
 
         <input type="hidden" name="_csrf" value="{{csrf}}">
