--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -53,16 +53,16 @@
                 <span class="d-flex align-items-center navbar-text actions">
                     {{#if isLogin}}
                         <i class="tiny material-icons">chevron_right</i>
-                        <a class="login" href="/auth/login">Войти</a>
+                        <a class="login" href="/auth/login/#logIn">Войти</a>
                     {{else}}
-                        <a class="login" href="/auth/login">Войти</a>
+                        <a class="login" href="/auth/login/#logIn">Войти</a>
                     {{/if}}
 
                     {{#if isRegister}}
                         <a class="btn btn-light action-button selected" role="button"
                            href="/auth/register">Регистрация</a>
                     {{else}}
-                        <a class="btn btn-light action-button" role="button" href="/auth/register">Регистрация</a>
+                        <a class="btn btn-light action-button" role="button" href="/auth/register/#register">Регистрация</a>
                     {{/if}}
                 </span>
             </div>
