--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,11 +1,15 @@
-{{#if loginError}}
-    <p class="alert">{{loginError}}</p>
-{{/if}}
-
 <div class="login-clean">
     <form method="post" action="/auth/login" id="logIn">
-        <h2 class="sr-only">Login Form</h2>
+        <h2 class="sr-only">Логин</h2>
         <div class="illustration"><i class="icon ion-ios-navigate"></i></div>
+
+        {{#if loginError}}
+            <div class="alert alert-danger" role="alert">
+                {{loginError}}
+            </div>
+        {{/if}}
+
+
         <div class="form-group"><input required class="form-control" type="email" name="email" placeholder="Email">
         </div>
         <div class="form-group"><input required class="form-control" type="password" name="password"
