--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -24,5 +24,5 @@
 <script src="/js/Fixed-navbar-starting-with-transparency.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
 <script src="/js/date.js"></script>
-<script src="/js/disable-button.js"></script>
+<!--<script src="/js/disable-button.js"></script>-->
 
