--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -25,6 +25,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
 <script src="/js/date.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="/js/chart.js"></script>
+<script src="
+/js/chart.js"></script>
 <!--<script src="/js/disable-button.js"></script>-->
 
